[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Sprites/Azzy/SparkBlast.png" type="Texture" id=1]
[ext_resource path="res://src/objects/SparkBlast.gd" type="Script" id=2]
[ext_resource path="res://src/objects/SparkBlastBoom.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "Blast"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 2, 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Move"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 44, 44 )

[node name="SparkBlast" type="Area2D"]
collision_layer = 2048
collision_mask = 109
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blast = SubResource( 2 )
anims/Move = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Spark1" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 45
script = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="Spark1"]
shape = SubResource( 5 )
disabled = true

[node name="Spark2" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 45
script = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="Spark2"]
shape = SubResource( 5 )
disabled = true

[connection signal="area_entered" from="." to="." method="_on_SparkBlast_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_SparkBlast_body_entered"]
